--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "login-dev": "mix --mix-config Modules/Login/webpack.mix.js",
+        "login-watch": "mix watch --mix-config Modules/Login/webpack.mix.js",
+        "login-prod": "mix --production --mix-config Modules/Login/webpack.mix.js"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.4.0",
@@ -18,6 +21,8 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
+        "sass": "^1.69.5",
+        "sass-loader": "^12.6.0",
         "tailwindcss": "^3.0.18"
     }
 }
