--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "sass": "^1.69.5",
         "sass-loader": "^12.6.0",
         "tailwindcss": "^3.0.18"
+    },
+    "dependencies": {
+        "jquery": "^3.7.1"
     }
 }
