--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "symfony/finder": "^5.0"
+        "symfony/finder": "^5.0",
+        "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
