--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
         "sass": "^1.69.5",
         "sass-loader": "^12.6.0",
         "tailwindcss": "^3.0.18"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.2",
+        "emojionearea": "^3.4.2",
+        "jquery": "^3.7.1",
+        "summernote": "^0.8.20"
     }
 }
