--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,9 @@
         "sun-asterisk/coding-standard": "^0.2.5"
     },
     "autoload": {
+        "files": [
+            "app/helpers/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
