--- a/package.json
+++ b/package.json
@@ -11,22 +11,24 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.4.0",
-        "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "alpinejs": "^3.13.3",
+        "autoprefixer": "^10.4.16",
         "axios": "^0.21",
-        "eslint": "^8.49.0",
+        "eslint": "^8.56.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.4.6",
+        "postcss": "^8.4.32",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.69.5",
         "sass-loader": "^12.6.0",
-        "tailwindcss": "^3.0.18"
+        "tailwindcss": "^3.4.0"
     },
     "dependencies": {
-        "bootstrap": "^5.3.2",
+        "bootstrap": "^4.6.2",
+        "codemirror": "^6.0.1",
         "emojionearea": "^3.4.2",
         "jquery": "^3.7.1",
-        "summernote": "^0.8.20"
+        "select2": "^4.1.0-rc.0",
+        "summernote": "^0.8.18"
     }
 }
