--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "emojionearea": "^3.4.2",
         "jquery": "^3.7.1",
         "select2": "^4.1.0-rc.0",
-        "summernote": "^0.8.18"
+        "summernote": "^0.8.18",
+        "toastify-js": "^1.12.0"
     }
 }
