--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-dom": "*",
+        "ext-fileinfo": "*",
+        "ext-json": "*",
+        "ext-libxml": "*",
+        "barryvdh/laravel-debugbar": "^3.7",
         "doctrine/dbal": "^2.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -13,11 +18,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "symfony/finder": "^5.0",
-        "ext-json": "*",
-        "ext-dom": "*",
-        "ext-libxml": "*",
-        "ext-fileinfo": "*"
+        "symfony/finder": "^5.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
