--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
         "tailwindcss": "^3.4.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.5.1",
         "bootstrap": "^4.6.2",
         "codemirror": "^6.0.1",
         "emojionearea": "^3.4.2",
+        "font-awesome": "^4.7.0",
         "jquery": "^3.7.1",
+        "moment": "^2.30.1",
         "select2": "^4.1.0-rc.0",
         "summernote": "^0.8.18",
         "toastify-js": "^1.12.0"
