--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.1",
         "bootstrap": "^4.6.2",
+        "chart.js": "^4.4.1",
         "codemirror": "^6.0.1",
         "emojionearea": "^3.4.2",
         "font-awesome": "^4.7.0",
