--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "font-awesome": "^4.7.0",
         "jquery": "^3.7.1",
         "moment": "^2.30.1",
+        "pusher-js": "^8.4.0-rc2",
         "select2": "^4.1.0-rc.0",
         "summernote": "^0.8.18",
         "toastify-js": "^1.12.0"
