--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql-test
 DB_PORT=3306
-DB_DATABASE=mysql
+DB_DATABASE=project_company_test
 DB_USERNAME=user-test
 DB_PASSWORD=password-test
 
