--- a/.sun-ci.yml
+++ b/.sun-ci.yml
@@ -12,7 +12,7 @@ jobs:
       - image: mysql:5.7
         name: mysql-test
         environment:
-          MYSQL_DATABASE: mysql
+          MYSQL_DATABASE: project_company_test
           MYSQL_USER: user-test
           MYSQL_PASSWORD: password-test
           MYSQL_ROOT_PASSWORD: root
@@ -71,7 +71,7 @@ jobs:
       - image: mysql:5.7
         name: mysql-test
         environment:
-          MYSQL_DATABASE: mysql
+          MYSQL_DATABASE: project_company_test
           MYSQL_USER: user-test
           MYSQL_PASSWORD: password-test
           MYSQL_ROOT_PASSWORD: root
@@ -82,6 +82,9 @@ jobs:
       - composer install
       - php artisan key:generate --env=testing
       - php artisan migrate --env=testing
+      - php artisan db:seed --class=CategoriesSeeder
+      - php artisan db:seed --class=RolesSeeder
+      - php artisan db:seed --class=StatusesSeeder
     script:
       - vendor/bin/phpunit --coverage-clover ./coverage.xml --coverage-html=coverage
     coverage:
